--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Possuí 72,3km de extensão em praias  </li>
                 <li>Tem a batata de Marechal que dispensa comentários </li>
                 <li>Tem um dos melhores <a href="https://twitter.com/_outofcontextrj">perfis</a>  "out of context" do Twitter</li>
-                <li>E tem o carioca, povo ixxperto e todo um molejo que causa inveja pra quem não é </li>
+                <li>E tem o carioca, povo ixxperto e com todo um molejo que causa inveja pra quem não é! </li>
             </ul>   
         </div>
 
